# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL

  6 Feb 2002; Grant Goodyear <g2boojum@gentoo.org> cnf/make.conf :
  Copied proxy lines from make.globals (bug 431).

  6 Feb 2002; Vitaly Kushneriuk <vitaly@gentoo.org> portage.py :
  added missing SLOT param to merge(...).

*portage 1.8.9_pre4 (6 Feb 2002)

  6 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  fixed some bugs in the handling of PROVIDES and virtual packages together
  with slots, they used code that wasn't upudated to the new dblink constructor
  virtuals now use "" as slot, resulting in normally to same behaviour as what
  has been done before.
  
  5 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  sorted the packages to unmerge since this makes package names with revision
  endings appear before plain version numbers. This makes the unmerge code
  first remove the old and non slot aware packages before removing the newer
  alternative which is in fact exactly the same apart from the revision
  identifier.

*portage 1.8.9_pre3 (5 Feb 2002)

  5 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  only let the backward compatibility algorithm kick in during unmerge since
  it's impossible to correctly detect is in general.

*portage 1.8.9_pre2 (5 Feb 2002)

  5 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  fixed bug in the backward compatibility algorithm

*portage 1.8.9_pre1 (5 Feb 2002)

  4 Feb 2002; G.Bevin <gbevin@gentoo.org> ebuild.sh, emerge, portage.py :
  added binary compatibility slots, this also contains additional code to keep
  the unmerging of packages backwards compatible.
  
  4 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  added back support for the "ebuild help" command which seems to have
  disappeared somewhere along the updates
  
  4 Feb 2002; G.Bevin <gbevin@gentoo.org> make.conf, make.globals :
  added description and default entry for the imlib USE variable